# Sam_Oct_IA

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt  setup_github.sh
configs/: oct.yaml
data/: README.md
data/processed/: .gitignore
docker/: Dockerfile.fiftyone  docker-compose.yml  entrypoint-fiftyone.sh  ingest-fiftyone.sh
docker/healthchecks/: healthcheck-fiftyone.sh
docs/: PAPER_ADAPTATION_PLAN.md  PAPER_REPRODUCTION_NOTES.md  architecture-analysis.md  code-style.md  configuration.md  creating-models.md  installation.md  modeling.md  preprocessing.md  project-structure.md  testing.md
mlops_project/: __init__.py  dataset.py
mlops_project/modeling/: __init__.py
mlops_project/modeling/models/: README.md  __init__.py  dual_channel_model.py
notebooks/: Activity3.ipynb  Avance1_Equipo21_EDA.ipynb  Avance2_Equipo21_FeatureEngineering.ipynb  Avance3_Equipo21.ipynb  Avance4_Equipo21.ipynb  Avance4_Equipo21_ConvNeXt-Tiny.ipynb  Avance4_Equipo21_EfficientNet-B1+LinearSVC.ipynb  Avance4_Equipo21_EfficientNet-B1+XGBoost.ipynb  Avance5_Equipo21_ConvNeXt-Tiny - Armando.ipynb  DDR2019_PCNN_ELM.ipynb  OCT_Colab_train_test.ipynb  _Avance3_Equipo21.ipynb  _Avance3_Equipo21_base_marco.ipynb  dataset_eda.ipynb  eyepacs_dataset_examples.ipynb  fiftyone_ddr2019.ipynb  training.ipynb
sam_ml/: config.py  dataset.py
sam_ml/datasets/: README.md  __init__.py  ddr2019.py  ddr2019_dualfilters.py  eyepacs.py
sam_ml/datasets/utils/: filters.py
sam_ml/modeling/: predict.py  train.py
sam_ml/modeling/models/: README.md  __init__.py  base.py  dual_channel_model.py  dual_channel_model_lightning.py  pcnn_elm_lightning.py  registry.py  simple_cnn.py  simple_cnn_lightning.py
sam_ml/oct/: __init__.py  cli.py  config.py  constants.py  data.py  dataset.py  dataset_management.py  ensemble.py  explain.py  inference.py  metrics.py  models.py  preprocessing.py  training.py
sam_ml/preprocessing/: README.md  __init__.py  base.py  eyepacs_dataset.py  filters.py  middleware.py  preprocess_ddr2019.py  preprocess_ddr2019_dualfilters.py  utils.py
sam_ml/utils/: __init__.py  progress.py
scripts/: audit_dataset.py  balance_dataset.py  create_splits.py  dataset_distribution.py  evaluate.py  explain_predictions.py  fix_notebook_transform.py  ingest_ddr2019_to_fiftyone.py  patch_convnext_tiny_notebook.py  predict.py  preprocess_oct.py  sample_dataset.py  train_ensemble.py  train_oct.py  visualize_transforms.py
tests/: README.md  conftest.py  test_base_model.py  test_config.py  test_dataset_management.py  test_datasets.py  test_ddr2019_dataset.py  test_ddr2019_dualfilters_dataset.py  test_dual_channel_model.py  test_model_registry.py  test_oct_pipeline.py  test_oct_preprocessing.py  test_preprocess_ddr2019.py  test_preprocess_ddr2019_dualfilters.py  test_preprocessing.py  test_preprocessing_router.py  test_preprocessor_registry.py  test_progress_reporting.py  test_train.py
