[project]
name = "sam-ai"
version = "0.1.0"
description = "A computer vision project to aid in the diagnosis of diabetic retinopathy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow>=2.15.0",  # CPU by default (includes Keras)
]

[project.optional-dependencies]
# Testing dependencies
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# NVIDIA GPU support (CUDA)
# Requires: NVIDIA GPU, CUDA Toolkit, cuDNN
# Install with: uv sync --extra cuda
cuda = [
    "tensorflow[and-cuda]>=2.15.0",
]

# Apple Silicon GPU support (MPS/Metal) - ARM64 only
# Requires: macOS 12.0+, Apple Silicon (M1/M2/M3)
# Install with: uv sync --extra mps
# Note: Only works on Apple Silicon, not Intel Macs
mps = [
    "tensorflow-macos>=2.15.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "tensorflow-metal>=1.0.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.pytest.ini_options]
# Pytest configuration
# This section configures default pytest behavior to avoid passing many parameters

# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
# Verbose output by default
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]

# Coverage configuration (when using pytest-cov)
# Uncomment lines below to enable coverage by default:
# addopts = [
#     "-v",
#     "--strict-markers",
#     "--tb=short",
#     "--disable-warnings",
#     "--cov=mlops_project",
#     "--cov-report=term-missing",
#     "--cov-report=html:htmlcov",
# ]

# Markers for categorizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "model: marks tests related to model architecture",
]

# Minimum pytest version
minversion = "7.0"

# Console output style
console_output_style = "progress"

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:tensorflow.*",
]

# Logging
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Timeout for tests (in seconds)
# Uncomment to enable timeout:
# timeout = 300
# timeout_method = "thread"
