[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "sam-ai"
# Note: Package name in code is sam_ml
version = "0.0.1"
description = "A computer vision project to aid in the diagnosis of diabetic retinopathy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.0,<4.11.0", # Compatible with numpy<2.0 (required by tensorflow 2.16.2)
    "pandas>=2.0.0", # Required for CSV processing in preprocessing
    "pillow>=10.0.0", # Required for PIL Image support (used by datasets library)
    "tqdm>=4.66.0", # Progress bars for long-running operations
    # PyTorch: Pin to 2.2.0 for macOS Intel (x86_64) compatibility
    # PyTorch 2.3.0+ no longer provides macOS Intel wheels
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchvision==0.17.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    # For other platforms (ARM64 Mac, Linux, Windows), allow newer versions
    "torch>=2.2.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torchvision>=0.17.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "pytorch-lightning>=2.0.0",
]

[project.scripts]
preprocess-dataset = "sam_ml.preprocessing:main"

[tool.uv.build-backend]
# Configure uv_build to use root-level packages (not src/ layout)
module-name = "sam_ml"
module-root = ""

[project.optional-dependencies]
# Testing dependencies
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# Jupyter notebook dependencies
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
]

[tool.pytest.ini_options]
# Pytest configuration
# This section configures default pytest behavior to avoid passing many parameters

# Output options
# Simple test configuration by default (no coverage)
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

# Filter warnings
# Suppress third-party library deprecation warnings (protobuf/TensorFlow)
# These warnings come from protobuf library used by TensorFlow
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Markers for categorizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "model: marks tests related to model architecture",
]

# Console output style
console_output_style = "progress"

# Logging
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
